--- a/build.gradle
+++ b/build.gradle
@@ -4,30 +4,24 @@
  * This is a general purpose Gradle build.
  * Learn how to create Gradle builds at https://guides.gradle.org/creating-new-gradle-builds
  */
-plugins {
-    id 'java'
-}
 
-repositories {
-    jcenter()
-    maven {
-        url "https://oss.sonatype.org/content/repositories/snapshots"
+
+allprojects {
+    repositories {
+        jcenter()
     }
 }
 
-configurations {
-    bungeeAPI
-    compile.extendsFrom bungeeAPI
-}
 
-dependencies {
-    bungeeAPI 'net.md-5:bungeecord-api:1.14-SNAPSHOT'
-    implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'commons-io:commons-io:2.4'
-}
+// dependencies {
+//     compile 'net.md-5:bungeecord-api:1.14-SNAPSHOT'
+//     compile 'com.velocitypowered:velocity-api:1.0.0-SNAPSHOT'
+//     implementation 'com.google.code.gson:gson:2.8.6'
+//     implementation 'commons-io:commons-io:2.4'
+// }
 
-jar {
-    from {
-        configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) }
-    }
-}
+// jar {
+//     from {
+//         configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+//     }
+// }
