--- a/common/build.gradle
+++ b/common/build.gradle
@@ -2,6 +2,9 @@ plugins {
     id 'java'
 }
 
+sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
+
 dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'commons-io:commons-io:2.4'
